# competitive_programming

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  debug.h  debug.hpp  input.txt  output.txt  temp.cpp  template.cpp
acmp/: 0011.cpp  0029.cpp  0038.cpp  0083.cpp  0100.cpp  0104.cpp  0113.cpp  0114.cpp  0115.cpp  0120.cpp  0121.cpp  0122.cpp  0123.cpp  0165.cpp  0169.cpp  0176.cpp  0179.cpp  0181.cpp  0183.cpp  0186.cpp  0187.cpp  0214.cpp  103.cpp  119.cpp  143.cpp  40.cpp  5.cpp  759.cpp  main.cpp
adventofcode/2022/: day_03_2.cpp  day_04_2.cpp  day_1_2.cpp  day_2_1.cpp  day_3_1.cpp  main.cpp
adventofcode/y2022/: day_01_1.cpp  day_02_2.cpp  day_04_1.cpp
adventofcode/y2023/: Cargo.toml
adventofcode/y2025/: d10_1.cpp  d10_2.py  d11_1.cpp  d11_2.cpp  d3.cpp  d4.cpp  d5_1.cpp  d5_2.cpp  d6_2.cpp  d7_1.cpp  d7_2.cpp  d8_1.cpp  d8_2.cpp  d9_1.cpp  d9_2.cpp
atcoder/: CMakeLists.txt
atcoder/dp_contest/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  J.cpp  K.cpp  L.cpp  M.cpp  N.cpp  O.cpp  P.cpp  R.cpp  S.cpp  U.cpp  V.cpp  X.cpp  Y.cpp  Z.cpp  main.cpp
codechef/problems/: BALLBOX.cpp  BURGERS2.cpp  DIVAB.cpp  EQPAIR.cpp  EQUALIZEAB.cpp  EVENSPLIT.cpp  IEMCO10_P3V1.cpp  MAX69NOMLSC.cpp  MAXEXP.cpp  PERMCREATE.cpp  PERMGCD.cpp  PRIMEDST.cpp  STICKBREAK.cpp  TWODIFFPALIN.cpp  VALIDMIN.cpp
cses/AdditionalProblems/: Advertisement.cpp  CountingBits.cpp  GraphGirth.cpp  IntersectionPoints.cpp  MaximumXorSubarray.cpp  NetworkRenovation.cpp
cses/AdvancedTechniques/: ApplesAndBananas.cpp  BeautifulSubgrids.cpp  CutAndPaste.cpp  DynamicConnectivity.cpp  HammingDistance.cpp  HousesAndSchools.cpp  MeetInTheMiddle.cpp  MonsterGameI.cpp  MonsterGameII.cpp  NecessaryRoads.cpp  NewRoadsQueries.cpp  OneBitPositions_Bitset.cpp  OneBitPositions_FFT.cpp  ParcelDelivery.cpp  ReachabilityQueries.cpp  ReachableNodes.cpp  SubarraySquares.cpp  TaskAssignment.cpp  main.cpp
cses/DynamicProgramming/: ArrayDescription.cpp  BookShop.cpp  CoinCombinations1.cpp  CoinCombinations2.cpp  (+10 more)
data_structures/: cartesian_tree.cpp  fenwick_tree.cpp  main.cpp  segment_tree.cpp  sparse_table.cpp
eolymp/: 0002.cpp  0027.cpp  0033.cpp  0034.cpp  0037.cpp  0040[#3-wa].cpp  0043.cpp  1738.cpp  1937.cpp  5366.cpp
nstus/: 10.cpp  9.cpp
projecteuler/: 10001stPrime.cpp  AmicableNumbers.cpp  EvenFibonacciNumbers.cpp  FactorialDigitSum.cpp  HighlyDivisibleTriangularNumber.cpp  LargeSum.cpp  LargestPalindromeProduct.cpp  LargestPrimeFactor.cpp  LargestProductInAGrid.cpp  LargestProductInASeries.cpp  LatticePaths.cpp  LongestCollatzSequence.cpp  MaximumPathSumI.cpp  MultiplesOf3Or5.cpp  NamesScores.cpp  PowerDigitSum.cpp  SmallestMultiple.cpp  SpecialPythagoreanTriplet.cpp  SumSquareDifference.cpp  SummationOfPrimes.cpp
sit_star/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
spoj/: COT.cpp  COT2.cpp  GOT.cpp  main.cpp
stepik/: readme.md
stress/: CMakeLists.txt  check.cpp  config.hpp  constants.h  data.in  fast.cpp  gen.cpp  main.cpp  slow.cpp  slow.out  utils.h  utils.hpp
templates/: AhoCorasick.cpp  BigInt.cpp  aggregated_queue.cpp  aho_corasick.cpp  bipartite_maxmimum_matching_kuhn.cpp  concave_max_plus_convolution.cpp  dsu.cpp  extcgd.cpp  fenwick_tree.cpp  fft.cpp  fraction.cpp  gauss.cpp  gp_hash_table.cpp  hld.cpp  kuhn_bipartite_matching.cpp  lca.cpp  li_chao_tree.cpp  line_container.cpp  max_flow.cpp  min_cost_flow.cpp  min_cost_max_flow.cpp  mo.cpp  modular.cpp  offline_dynamic_connectivity.cpp  persistent_segment_tree.cpp  persistent_stack.cpp  point_add_rectangle_sum_cdq.cpp  pollard_rho.cpp  prefix_function.cpp  primes.cpp  rabin_miller.cpp  rolling_hash.cpp  segment_tree.cpp  sparse_table.cpp  sqrt_decomposition.cpp  square_matrix.cpp  suffix_array.cpp  treap.cpp  trie.cpp  two_sat.cpp  (+2 more)
timus/: 1133.cpp
uva/: 12003.cpp
yandex_algo_training/: 1.cpp  10.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  A.cpp  A_11.cpp  A_12.cpp  A_13.cpp  A_14.cpp  A_15.cpp  A_16.cpp  A_17.cpp  A_18.cpp  A_19.cpp  A_20.cpp  A_21.cpp  A_22.cpp  A_23.cpp  A_24.cpp  A_25.cpp  A_26.cpp  A_27.cpp  A_28.cpp  A_29.cpp  A_30.cpp  A_31.cpp  A_32.cpp  A_33.cpp  A_34.cpp  A_35.cpp  A_36.cpp  A_37.cpp  A_38.cpp  A_39_.cpp  (+35 more)
(+1604 files in other folders)
